apps/hello/bases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: hello
  namespace: hello
spec:
  ingressClassName: nginx
  rules:
  - host: hello-172-19-0-3.nip.io
    http:
      paths:
      - backend:
          service:
            name: hello
            port:
              number: 8080
        path: /
        pathType: Prefix
